--- a/.github/workflows/firstCI.yml
+++ b/.github/workflows/firstCI.yml
@@ -23,6 +23,10 @@ jobs:
         - name: Run tests
           run: npm test
 
+    Build_and_push_Docker_image:
+      runs-on: ubuntu-latest
+      needs: Initialize_and_test
+      steps:
         - name: Docker Login
           uses: docker/login-action@v3
           with:
@@ -30,10 +34,10 @@ jobs:
             password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
         - name: Set up Docker Buildx
-          run : docker/setup-buildx-action@v3
+          uses : docker/setup-buildx-action@v3
         
         - name: Docker push
-          run : docker/build-push-action@v5
+          uses : docker/build-push-action@v5
 
         - name: Build and push Docker image
           uses: docker/build-push-action@v5
@@ -41,4 +45,4 @@ jobs:
             context: .
             file: ./Dockerfile
             push: true
-            tags: ${{ secrets.DOCKERHUB_USERNAME }}/jest-testing:latest
+            tags: ${{ secrets.DOCKERHUB_USERNAME }}/jest-testingtest-:latest npm test
