--- a/.github/workflows/firstCI.yml
+++ b/.github/workflows/firstCI.yml
@@ -45,4 +45,4 @@ jobs:
             context: .
             file: ./Dockerfile
             push: true
-            tags: ${{ secrets.DOCKERHUB_USERNAME }}/jest-testingtest-:latest
+            tags: ${{ secrets.DOCKERHUB_USERNAME }}/jest-testing:test-latest npm test
