--- a/.github/workflows/firstCI.yml
+++ b/.github/workflows/firstCI.yml
@@ -43,6 +43,6 @@ jobs:
           uses: docker/build-push-action@v5
           with:
             context: .
-            file: ./Dockerfile
+            file: Dockerfile
             push: true
             tags: ${{secrets.DOCKERHUB_USERNAME}}/jest-testing:test-latest
