--- a/.github/workflows/firstCI.yml
+++ b/.github/workflows/firstCI.yml
@@ -24,31 +24,31 @@ jobs:
         - name: Run tests
           run: npm test
 
-    # Build_and_push_Docker_image:
-    #   runs-on: ubuntu-latest
-    #   needs: Initialize_and_test
-    #   steps:
-    #     - name: Checkout code
-    #       uses: actions/checkout@v4
+    Build_and_push_Docker_image:
+      runs-on: ubuntu-latest
+      needs: Initialize_and_test
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v4
         
-    #     - name: Debug directory listing
-    #       run: |
-    #         echo "PWD: $(pwd)"
-    #         ls -la
+        - name: Debug directory listing
+          run: |
+            echo "PWD: $(pwd)"
+            ls -la
       
-    #     - name: Docker Login
-    #       uses: docker/login-action@v3
-    #       with:
-    #         username: ${{ secrets.DOCKERHUB_USERNAME }}
-    #         password: ${{ secrets.DOCKERHUB_PASSWORD }}
+        - name: Docker Login
+          uses: docker/login-action@v3
+          with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-    #     - name: Set up Docker Buildx
-    #       uses : docker/setup-buildx-action@v3
+        - name: Set up Docker Buildx
+          uses : docker/setup-buildx-action@v3
       
-    #     - name: Build and push Docker image
-    #       uses: docker/build-push-action@v5
-    #       with:
-    #         context: .
-    #         file: ./Dockerfile
-    #         push: true
-    #         tags: ${{secrets.DOCKERHUB_USERNAME}}/jest-testing:test-latest
+        - name: Build and push Docker image
+          uses: docker/build-push-action@v5
+          with:
+            context: .
+            file: ./Dockerfile
+            push: true
+            tags: ${{secrets.DOCKERHUB_USERNAME}}/jest-testing:test-latest
