--- a/.github/workflows/firstCI.yml
+++ b/.github/workflows/firstCI.yml
@@ -36,11 +36,11 @@ jobs:
             echo "PWD: $(pwd)"
             ls -la
       
-        - name: Docker Login
-          uses: docker/login-action@v3
-          with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_PASSWORD }}
+        # - name: Docker Login
+        #   uses: docker/login-action@v3
+        #   with:
+        #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+        #     password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
         - name: Set up Docker Buildx
           uses : docker/setup-buildx-action@v3
