--- a/.github/workflows/firstCI.yml
+++ b/.github/workflows/firstCI.yml
@@ -42,13 +42,13 @@ jobs:
         #     username: ${{ secrets.DOCKERHUB_USERNAME }}
         #     password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-        - name: Set up Docker Buildx
-          uses : docker/setup-buildx-action@v3
+        # - name: Set up Docker Buildx
+        #   uses : docker/setup-buildx-action@v3
       
-        - name: Build and push Docker image
-          uses: docker/build-push-action@v5
-          with:
-            context: .
-            file: ./Dockerfile
-            push: true
-            tags: ${{secrets.DOCKERHUB_USERNAME}}/jest-testing:test-latest
+        # - name: Build and push Docker image
+        #   uses: docker/build-push-action@v5
+        #   with:
+        #     context: .
+        #     file: ./Dockerfile
+        #     push: true
+        #     tags: ${{secrets.DOCKERHUB_USERNAME}}/jest-testing:test-latest
