--- a/.github/workflows/firstCI.yml
+++ b/.github/workflows/firstCI.yml
@@ -1,54 +1,54 @@
 #firstCI.yml
 name: My First CI Workflow
 on: push
-# This workflow is triggered on push events to the repository.
+
 jobs:
-    Initialize_and_test:
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
+  Initialize_and_test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-        - name: Set up Node.js
-          uses: actions/setup-node@v4
-          with:
-            node-version: '21'
-            cache: 'npm'
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '21'
+          cache: 'npm'
 
-        - name: Install Jest
-          run: npm ci
+      - name: Install Jest
+        run: npm ci
 
-        - name: Install dependencies
-          run: npm install
+      - name: Install dependencies
+        run: npm install
 
-        - name: Run tests
-          run: npm test
+      - name: Run tests
+        run: npm test
 
-    Build_and_push_Docker_image:
-      runs-on: ubuntu-latest
-      needs: Initialize_and_test
-      steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
-        
-        - name: Debug directory listing
-          run: |
-            echo "PWD: $(pwd)"
-            ls -la
-        
-        - name: Log in to Docker Hub
-          uses: docker/login-action@v3
-          with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_TOKEN }}
+  Build_and_push_Docker_image:
+    runs-on: ubuntu-latest
+    needs: Initialize_and_test
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v3
+      - name: Debug directory listing
+        run: |
+          echo "PWD: $(pwd)"
+          ls -la
 
-        - name: Build and push Docker image
-          uses: docker/build-push-action@v5
-          with:
-            context: .
-            file: ./Dockerfile
-            push: true
-            tags: ${{ secrets.DOCKERHUB_USERNAME }}/tonydaniel28:latest
+      - name: Docker Login
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/jest-testing:latest
